--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Single page landing page for tour agency build with only with SASS code ",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass assets/sass/main.scss assets/css/style.css -w" 
+    "watch:sass": "node-sass assets/sass/main.scss assets/css/style.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch:sass"
   },
   "author": "Hridoy Ahemd",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^8.0.0"
+    "autoprefixer": "^10.4.14",
+    "concat": "^1.0.3",
+    "node-sass": "^8.0.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^10.1.0"
   }
 }
