small change outside

--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "watch:sass": "node-sass assets/sass/main.scss assets/css/style.css -w",
     "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver watch:sass"
+    "start": "npm-run-all --parallel devserver watch:sass",
+	
+	"compile:sass": "node-sass assets/sass/main.scss assets/css/style.comp.css",
+    "prefix:sass": "postcss --use autoprefixer -b 'last 10 versions' assets/css/style.comp.css -o assets/css/style.prefix.css",
+    "compress:sass": "node-sass assets/css/style.prefix.css assets/css/style.css --output-style compressed",
+    
+    "build:css": "npm-run-all compile:sass prefix:sass compress:sass"
   },
   "author": "Hridoy Ahemd",
   "license": "ISC",
